<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Taler Wallet</string>
    <string name="google_play_title" tools:keep="@string/google_play_title">Taler Wallet (experimental)</string>
    <string name="google_play_short_desc" tools:keep="@string/google_play_short_desc">GNU Taler makes privacy-friendly online transactions fast and easy.</string>
    <string name="google_play_full_desc" tools:keep="@string/google_play_full_desc"><![CDATA[
This app is a wallet for GNU Taler.

GNU Taler is a privacy-preserving payment system. Customers can remain anonymous, but merchants cannot hide their income from payments made with GNU Taler. This helps to prevent tax evasion and money laundering.

The primary use case of GNU Taler is payments; it is not intended as a store of value. Payments are always backed by an existing currency.

Payments are made after converting existing money into electronic money (e-cash) with the help of an Exchange service, i.e. a payment service provider for Taler.

To make a payment, customers simply need a Taler wallet with sufficient e-cash. A merchant (seller) can accept payments without customers having to register on the seller\'s website.

GNU Taler is immune to many types of fraud such as credit card data theft, phishing, or chargeback fraud. In the event of loss or theft, only the limited amount of e-cash still in the wallet may be lost.
]]></string>
    <string name="nav_error">Error</string>
    <string name="nav_exchange_fees">Provider fees</string>
    <string name="nav_exchange_tos">PSP\'s terms of service</string>
    <string name="nav_prompt_withdraw">Withdraw from bank</string>
    <string name="nav_prompt_withdraw_currency">Withdraw %1$s</string>
    <string name="actions">Actions</string>
    <string name="button_back">Go back</string>
    <string name="button_scan_qr_code">Scan Taler QR code</string>
    <string name="button_scan_qr_code_label">Scan QR code</string>
    <string name="cancel">Cancel</string>
    <string name="char_count">%1$d/%2$d</string>
    <string name="copy" tools:override="true">Copy</string>
    <string name="currency">Currency</string>
    <string name="currency_url">%1$s (%2$s)</string>
    <string name="currency_via">via</string>
    <string name="edit">Edit</string>
    <string name="enter_uri">Enter taler:// URI</string>
    <string name="enter_uri_label">Enter URI</string>
    <string name="error">Error</string>
    <string name="import_db">Import</string>
    <string name="loading">Loading</string>
    <string name="menu">Menu</string>
    <string name="offline">Operation requires internet access. Please ensure your internet connection works and try again.</string>
    <string name="offline_banner">No internet access</string>
    <string name="ok">OK</string>
    <string name="open">Open</string>
    <string name="paste">Paste</string>
    <string name="paste_invalid">Clipboard contains an invalid data type</string>
    <string name="reset">Reset</string>
    <string name="share_payment">Share payment link</string>
    <string name="uri_invalid">Not a valid Taler URI</string>
    <string name="warning">Warning</string>
    <string name="biometric_auth_error">Authentication error: %1$s</string>
    <string name="biometric_auth_failed">Authentication failed</string>
    <string name="biometric_auth_unavailable">No authentication methods are available.</string>
    <string name="biometric_prompt_title">Unlock to use wallet</string>
    <string name="biometric_unlock_label">Tap to unlock</string>
    <string name="qr_scan_context_title">Possibly unintended action</string>
    <string name="qr_scan_context_receive_message">Seems like you were intending to receive money, but the QR code that you scanned corresponds to a different action. Do you wish to continue?</string>
    <string name="qr_scan_context_send_message">Seems like you were intending to send money, but the QR code that you scanned corresponds to a different action. Do you wish to continue?</string>
    <string name="qr_scan_offline">This action requires internet connection, in order to retry when internet is available, please stay on this screen and wait, or press the button below.</string>
    <string name="error_no_uri">Error: No Taler URI was found</string>
    <string name="error_broken_uri">Error: This Taler URI is (currently) not working.</string>
    <string name="error_unsupported_uri">Error: This Taler URI is not supported.</string>
    <string name="amount_available_transfer">Available for transfer: %1$s</string>
    <string name="amount_available_transfer_fees">Available for transfer after fees: %1$s</string>
    <string name="amount_chosen">Chosen amount</string>
    <string name="amount_conversion">Conversion</string>
    <string name="amount_deposit">Amount to deposit</string>
    <string name="amount_effective">Effective amount</string>
    <string name="amount_fee">Fee</string>
    <string name="amount_invalid">Amount invalid</string>
    <string name="amount_invoiced">Amount requested</string>
    <string name="amount_lost">Amount lost</string>
    <string name="amount_negative">-%s</string>
    <string name="amount_max">Maximum amount</string>
    <string name="amount_excess">Amount exceeds maximum of %1$s</string>
    <string name="amount_positive">+%s</string>
    <string name="amount_receive">Amount to receive</string>
    <string name="amount_received">Amount received</string>
    <string name="amount_send">Amount to send</string>
    <string name="amount_sent">Amount sent</string>
    <string name="amount_total">Total amount</string>
    <string name="amount_total_label">Total:</string>
    <string name="amount_transfer">Transfer</string>
    <string name="amount_withdraw">Amount to withdraw from bank</string>
    <string name="balance_scope_auditor">Auditor: %1$s</string>
    <string name="balance_scope_exchange">From %1$s</string>
    <string name="balances_empty_state">There is no digital cash in your wallet.\n\nYou can get demo money from the demo bank:\n\nhttps://bank.demo.taler.net</string>
    <string name="balances_empty_demo_url">https://bank.demo.taler.net</string>
    <string name="balances_empty_get_money">Get demo money</string>
    <string name="balances_inbound_amount">+%1$s incoming</string>
    <string name="balances_outbound_amount">-%1$s outgoing</string>
    <string name="balances_title">Balances</string>
    <string name="transaction_action_kyc">Complete KYC</string>
    <string name="transaction_denom_loss">Loss of funds</string>
    <string name="transaction_deposit">Deposit</string>
    <string name="transaction_deposit_to">Deposit to %1$s</string>
    <string name="transaction_dummy_title">Unknown transaction</string>
    <string name="transaction_order">Purchase</string>
    <string name="transaction_order_id">Order #%1$s</string>
    <string name="transaction_order_total">Total</string>
    <string name="transaction_paid">Paid</string>
    <string name="transaction_peer_pull_credit">Request</string>
    <string name="transaction_peer_pull_debit">Request paid</string>
    <string name="transaction_peer_pull_debit_pending">Paying request</string>
    <string name="transaction_peer_push_credit">Received</string>
    <string name="transaction_peer_push_credit_pending">Receiving</string>
    <string name="transaction_peer_push_debit">Sent</string>
    <string name="transaction_peer_push_debit_pending">Sending</string>
    <string name="transaction_pending">PENDING</string>
    <string name="transaction_preparing_kyc">KYC required, preparing challenge</string>
    <string name="transaction_refresh">Coin expiry change fee</string>
    <string name="transaction_refund">Refund</string>
    <string name="transaction_state_aborted">This transaction was aborted</string>
    <string name="transaction_state_aborted_manual">This transaction was aborted. If you already sent money to this exchange, it will be transferred back to you in %1$s</string>
    <string name="transaction_state_aborting">This transaction is aborting</string>
    <string name="transaction_state_done">This transaction was completed successfully</string>
    <string name="transaction_state_expired">This transaction has expired</string>
    <string name="transaction_state_failed">This transaction has failed or been abandoned</string>
    <string name="transaction_state_finalizing">This transaction is finalizing</string>
    <string name="transaction_state_pending">This transaction is pending</string>
    <string name="transaction_state_pending_bank">Waiting for authorization in the bank</string>
    <string name="transaction_state_pending_kyc_bank">This transaction would exceed a limit set by the payment service provider. To increase the limit, follow the instructions linked below.</string>
    <string name="transaction_state_pending_kyc_auth">You need to prove having control over the bank account for the deposit. To continue, follow the instructions linked below.</string>
    <string name="transaction_state_suspended">This transaction is suspended</string>
    <string name="transactions_abort">Abort</string>
    <string name="transactions_abort_dialog_message">Are you sure you want to abort this transaction? Funds still in transit might get lost.</string>
    <string name="transactions_abort_dialog_title">Abort transaction</string>
    <string name="transactions_balance">Balance</string>
    <string name="transactions_currency">%1$s (%2$s)</string>
    <string name="transactions_delete">Delete</string>
    <string name="transactions_delete_dialog_message">Are you sure you want to remove this transaction from your wallet?</string>
    <string name="transactions_delete_dialog_title">Delete transaction</string>
    <string name="transactions_delete_selected_dialog_message">Are you sure you want to remove the selected transactions from your wallet?</string>
    <string name="transactions_delete_selected_dialog_title">Delete transactions</string>
    <string name="transactions_detail_title">Transaction</string>
    <string name="transactions_empty">You don\'t have any transactions</string>
    <string name="transactions_empty_search">No transactions found. Try a different search.</string>
    <string name="transactions_error">Could not load transactions\n\n%s</string>
    <string name="transactions_fail">Abandon</string>
    <string name="transactions_fail_dialog_message">Are you sure you abandon this transaction? Funds still in transit WILL GET LOST.</string>
    <string name="transactions_fail_dialog_title">Abandon transaction</string>
    <string name="transactions_filter_nonfinal">You are viewing pending transactions</string>
    <string name="transactions_receive_funds">Receive</string>
    <string name="transactions_resume">Resume</string>
    <string name="transactions_retry">Retry</string>
    <string name="transactions_required_kyc">KYC required to proceed</string>
    <string name="transactions_select_all">Select All</string>
    <string name="transactions_send_funds">Send</string>
    <string name="transactions_suspend">Suspend</string>
    <string name="transactions_title">Transactions</string>
    <string name="payment_aborted">Aborted</string>
    <string name="payment_aborting">Aborting</string>
    <string name="payment_already_paid">You\'ve already paid for this purchase.</string>
    <string name="payment_amount_total">Total: %1$s</string>
    <string name="receive_peer">Request money from another wallet</string>
    <string name="exchange_global_add">Treat as global</string>
    <string name="exchange_global_delete">Stop treating as global</string>
    <string name="exchange_menu_manual_withdraw">Withdraw</string>
    <string name="exchange_reload">Reload information</string>
    <string name="exchange_tos_accept">Accept terms of service</string>
    <string name="exchange_tos_forget">Reject terms of service</string>
    <string name="exchange_tos_view">View terms of service</string>
</resources>